# troposphere-pydantic

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  package-lock.json  package.json  patch_pydantic.py  pyproject.toml  setup.cfg
.github/workflows/: on-pr.yml  spell-check.yml
troposphere/: __init__.py  cloudformation.py  constants.py  mixins.py  policies.py  protocols.py  utils.py  validators.py
